--- a/AndBible/res/values-nl/strings.xml
+++ b/AndBible/res/values-nl/strings.xml
@@ -9,7 +9,7 @@
     <string name="app_name">And Bible</string>
 
 	<!-- Startup & Help -->
-    <string name="splash_top_text">"\"En God zei: 'Er moet licht komen'en er was licht.\" Genesis 1:3"</string>
+    <string name="splash_top_text">""En God zei: \'Er moet licht komen\'en er was licht." Genesis 1:3"</string>
     <string name="help_text">Druk op de MENU-toets voor acties \n\nGa naar het volgende of vorige hoofdstuk met behulp van de track-bal, D-pad of veeg op het scherm met je vinger</string>
     <string name="help_text_long">Navigatie \nGa naar het volgende of vorige hoofdstuk met behulp van de track-bal, D-pad of vegen op het scherm met je vinger \n\nDruk op de MENU toets voor acties \n\nOm meer documenten te downloaden druk op Menu / Meer / Download documenten \n\nDruk lang op het bijbel venster om het contextmenu te openen voor acties met betrekking tot het huidige vers. \nDruk lang op een document in de document selector om het te verwijderen of te bekijken. \n\nSpraak\nDruk op Spreek om een dialoog te starten of te stoppen met lezen \n\nBladwijzers \nBladwijzers kunnen worden toegevoegd via het vers context menu. De Bladwijzer Manager is toegankelijk via het hoofdmenu. Met het Bladwijzer Manager context menu kunnen bladwijzers worden gegroepeerd met behulp van labels.</string>
     <string name="version_text">Versie %s</string>
