--- a/AndBible/res/values/strings.xml
+++ b/AndBible/res/values/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" standalone="no"?>
 <!-- Application text
  
  @author Martin Denham [mjdenham at gmail dot com]
@@ -7,8 +7,7 @@
 -->
 <resources>
     <string name="app_name">And Bible</string>
-
-	<!-- Startup & Help -->
+    <!-- Startup & Help -->
     <string name="splash_top_text">\n\"And God said, \'Let there be light,\' and there was light.\"\nGenesis 1:3</string>
     <string name="help_text">Press the MENU key for actions\n\nGo to the next or previous chapter by using the track-ball, D-pad or swiping the screen with your finger</string>
     <string name="help_text_long"><b>Navigation</b>\nGo to the next or previous chapter by using the track-ball, D-pad or swiping the screen with your finger
@@ -25,8 +24,7 @@
     \nLong press the Back button to access the History list
     </string>
     <string name="version_text">Version %s</string>
-	<string name="no_sdcard_error">Please insert an SD card and start And Bible again.</string>
-    
+    <string name="no_sdcard_error">Please insert an SD card and start And Bible again.</string>
     <!-- main menu -->
     <string name="chooseBook">Document</string>
     <string name="selectPassage">Passage</string>
@@ -35,13 +33,11 @@
     <string name="history">History</string>
     <string name="speak">Speak</string>
     <string name="help">Help</string>
-    
     <!-- Passage navigation -->
     <string name="choosePassageBookName">Choose Book</string>
     <string name="choosePassageChapterName">Choose Chapter</string>
     <string name="choosePassageVerseName">Choose Verse</string>
-
-	<!--  Search -->
+    <!--  Search -->
     <string name="search_index">Search Index</string>
     <string name="index_creation_required">An index is required to search.\n\nIndexes may be downloaded from the internet or created locally.\n\nDownloading is much quicker and downloaded indexes have more search features.\n\nAn internet connection is required to download indexes.\n</string>
     <string name="indexing_wait_msg">When indexing has completed you will be taken to the search screen.</string>
@@ -49,26 +45,23 @@
     <string name="index_download">Download</string>
     <string name="index_not_available_for_download">This index is not available for download</string>
     <string name="index_create">Create</string>
-
-	<!-- Tasks -->
+    <!-- Tasks -->
     <string name="progress_status">Progress</string>
     <string name="task_kill_warning">These long running tasks may terminate if you switch to another application before they finish.</string>
     <string name="no_tasks_running">There are no tasks currently being executed.</string>
-
     <!-- Search -->
     <string name="search_words_group_prompt">Find verses</string>
     <string name="search_all_words">All words</string>
     <string name="search_any_word">Any word</string>
     <string name="search_phrase">Phrase</string>
     <string name="search_result_count">%d matches found</string>
-    <string name="search_showing_first">Too many matches.  Showing first %d</string> 
+    <string name="search_showing_first">Too many matches.  Showing first %d</string>
     <string name="search_bible_section_group_prompt">Search Where</string>
     <string name="search_all_bible">Whole bible</string>
     <string name="search_new_testament">New Testament</string>
     <string name="search_old_testament">Old Testament</string>
     <string name="search_current_book">Current book</string>
     <string name="error_executing_search">Invalid search query</string>
-
     <!-- Preferences -->
     <string name="prefs_show_verseno_title">Verse numbers</string>
     <string name="prefs_show_verseno_summary">Show verse numbers</string>
@@ -93,13 +86,11 @@
     <string name="prefs_interface_locale_title">Application language</string>
     <string name="prefs_interface_locale_summary">Select custom user interface language</string>
     <string name="locale_change_warning">Application will be restarted to switch to the new interface language</string>
-
     <!-- Notes screen -->
     <string name="no_chapter_notes">No notes exist in this chapter</string>
     <string name="no_verse_notes">No notes exist in this verse</string>
     <string name="previous">Previous</string>
     <string name="next">Next</string>
-
     <!--  Strongs -->
     <string name="strongs">Strong\'s Dictionary</string>
     <string name="strongs_not_installed">Please download Strong\'s Hebrew and Greek dictionaries</string>
@@ -109,7 +100,6 @@
     <string name="morph_robinson_not_installed">Please download \'Robinson\'s Morphological Analysis Codes\' dictionary</string>
     <string name="strongs_toggle_button_on">nnnn</string>
     <string name="strongs_toggle_button_off">nnnn</string>
-
     <!-- Module download -->
     <string name="download">Download Documents</string>
     <string name="download_confirmation">Download a bible from the internet?</string>
@@ -123,20 +113,17 @@
     <string name="wait_for_bible_not_yet">Please wait.  A bible has not yet completed installation.</string>
     <string name="download_complete_no_bibles">No bible was installed.  Please press Back and try again.</string>
     <string name="too_many_jobs">Too many tasks executing.  Please wait for some to finish and try again.</string>
-
     <!-- Document context menu -->
     <string name="delete">Delete</string>
     <string name="delete_index">Delete search index</string>
     <string name="about">About</string>
     <string name="delete_doc">Delete %s?</string>
     <string name="delete_search_index_doc">Delete index of %s?</string>
-    
     <!-- Verse context menu -->
     <string name="notes">Footnotes and references</string>
     <string name="copy">Copy current verse</string>
     <string name="share_verse">Share current verse ...</string>
     <string name="share_verse_subject">A Bible verse has been shared with you using And Bible</string>
-
     <!-- Bookmarks -->
     <string name="bookmarks">Bookmarks</string>
     <string name="add_bookmark">Add bookmark</string>
@@ -146,17 +133,13 @@
     <string name="assign_labels">Assign labels</string>
     <string name="new_label">New Label</string>
     <string name="new_label_prompt">Name</string>
-    
     <!-- Dictionary -->
     <string name="dictionary">Dictionary</string>
     <string name="search_dictionary_hint">Search dictionary</string>
     <string name="dictionary_contents">Contents</string>
-
     <!-- General Book -->
     <string name="general_book">Book</string>
     <string name="general_book_contents">Contents</string>
-
-
     <!-- Speak -->
     <!-- plurals tags referencing the below have been moved to untranslated_strings.xml -->
     <!-- Speak - Bible -->
@@ -173,18 +156,15 @@
     <!-- Speak - Common -->
     <string name="stop">Stop</string>
     <string name="tts_lang_not_available">Language is not available.</string>
-	<string name="speak_queue">Queue</string>
-	<string name="speak_repeat">Repeat</string>
-	
-	<!-- Document types -->    
-	<string name="doc_type_bible">Bible</string>
-	<string name="doc_type_commentary">Commentary</string>
-	<string name="doc_type_dictionary">Dictionary</string>
-	<string name="doc_type_book">Book</string>
-
+    <string name="speak_queue">Queue</string>
+    <string name="speak_repeat">Repeat</string>
+    <!-- Document types -->
+    <string name="doc_type_bible">Bible</string>
+    <string name="doc_type_commentary">Commentary</string>
+    <string name="doc_type_dictionary">Dictionary</string>
+    <string name="doc_type_book">Book</string>
     <!-- Languages -->
-	<string name="lang_default">Default</string>
-	
+    <string name="lang_default">Default</string>
     <!-- General -->
     <string name="error_occurred">An error has occurred</string>
     <string name="okay">OK</string>
@@ -195,4 +175,9 @@
     <string name="retry">Try Again</string>
     <string name="please_wait">Please wait...</string>
     <string name="all">All</string>
+    <string name="usernotes">User Notes</string>
+    <string name="usernote_add">Add a user note</string>
+    <string name="usernote_added">User note added</string>
+    <string name="usernote_exists">User note already exists</string>
+    <string name="add_usernote">Add user note</string>
 </resources>
