--- a/AndBible/res/values-af/strings.xml
+++ b/AndBible/res/values-af/strings.xml
@@ -18,4 +18,128 @@
   <string name="doc_type_dictionary">Woordeboek</string>
   <string name="doc_type_book">Boek</string>
   <string name="error">Fout</string>
-<string name="add_bookmark">Voeg boekmerk by</string><string name="all">Alles</string><string name="all_greek_occurrences">"Vind alle gebeurtenisse\n"</string><string name="all_hebrew_occurrences">Vind alle gebeurtenisse</string><string name="app_name">And Bible</string><string name="assign_labels">Ken etikette toe</string><string name="bookmark_added">Boekmerk bygevoeg</string><string name="bookmark_exists">Boekmerk bestaan ​​al</string><string name="bookmark_labels">Boekmerk etikette</string><string name="bookmarks">Boekmerke</string><string name="cancel">Kanselleer</string><string name="chooseBook">Dokument</string><string name="choosePassageBookName">Kies \'n Boek</string><string name="choosePassageVerseName">Kies \'n Vers</string><string name="copy">Kopieer huidige vers</string><string name="delete">Skrap</string><string name="delete_doc">Skrap %s?</string><string name="delete_index">Skrap soek indeks</string><string name="delete_search_index_doc">Skrap indeks van %s?</string><string name="dictionary_contents">Inhoud</string><string name="doc_type_bible">Bybel</string><string name="download">Laai Dokumente af</string><string name="download_complete_no_bibles">Geen Bybel is geïnstalleer. Druk terug en probeer weer.</string><string name="download_confirmation">Laai \'n Bybel van die internet af?</string><string name="download_document_confirm_prefix">"Laai af"</string><string name="download_source_message">Dokumente word afgelaai van http://www.crosswire.org &amp; http://xiphos.org</string><string name="error_downloading">\'n Fout met die aflaai. Gaan asseblief jou internet konneksie na.</string><string name="error_executing_search">Ongeldige soektog</string><string name="error_occurred">\'n Fout het ontstaan</string><string name="help">Help</string><string name="help_text">Druk die sleutel Menu vir optrede\n\nGaan na die volgende of vorige hoofstuk deur die spoor-bal, D-pad of om jou vinger oor die skerm te beweeg</string><string name="help_text_long">"<b>Navigasie</b>\nGaan na die volgende of vorige hoofstuk met behulp van die spoor-bal, D-pad of beweeg oor die skerm met jou vinger\nDubbel druk verander Vol skerm aan/af.\n\n<b>Keurlys</b>\nDruk Menu sleutel vir meer aksies\n\nOm meer dokumente af te laai druk Menu/Meer/Laai Dokumente af.\n\n<b>Spraak</b>\nDruk op praat om \'n dialoog te begin of om ophou te lees\n\n<b>Boekmerke</b>\nBoekmerke kan toegevoeg word deur middel van die inhoud keurlys. Die Boekmerk Bestuurder kan deur middel van die hoof keurlys bereik word.\nDie Boekmerk Bestuurder inhoud keurlys laat boekmerke gegroepeer word deur om etikette te gebruik.\n\n<b>Soek</b>\nSoek teks kan spesiale karakters insluit soos *, ?, AND, OR, Not (sien \"Apache Lucene - Qury Parser Syntax\" vir meer inligting)\n\n<b>Inhoud Keurlys</b>\nDruk lank op die Bybel uitsig om die inhoud keurlys oop te maak vir aksies wat die huidige vers affekteer\nDruk lank op \'n dokument in die dokument kieser, om dit uit te wis of om sy informasie te sien\nDruk lank op die Terug knoppie om toegang tot die Geskiedenis lys te kry"</string><string name="history">Geskiedenis</string><string name="index">Indeks</string><string name="index_create">Skep</string><string name="index_creation_required">"\'n Indeks word benodig om te soek. \n\nIndekse kan van die internet afgelaai of plaaslik geskep word.\n\nAflaai is baie vinniger, en afgelaaide indekse het meer soek funksies.\n\n \'n Internet aansluiting is nodig om indekse af te laai."</string><string name="index_download">Laai af</string><string name="index_not_available_for_download">Hierdie indeks is nie beskikbaar vir aflaai</string><string name="indexing_wait_msg">Wanneer die indekseer voltooi het, sal u geneem word na die soek skerm.</string><string name="lang_default">Standaard</string><string name="locale_change_warning">Applikasie sal sal stop en weer van voor af begin om oor te skakel na die nuwe taal</string><string name="more">More</string><string name="morph_robinson_not_installed">Laai asseblief \'Robinson se morfologiese analise Kodes\' woordeboek af</string><string name="new_label">Nuwe etiket</string><string name="new_label_prompt">Name</string><string name="next">Volgende</string><string name="no">Nee</string><string name="no_chapter_notes">Geen notas bestaan vir hierdie hoofstuk</string><string name="no_indexed_bible_with_strongs_ref">Jy moet \'n Bybel met die Strong\'s numbers aflaai, en dan, laai sy indeks volgens Soek funksie af</string><string name="no_internet_connection">Kon nie na die internet konnekteer nie</string><string name="no_sdcard_error">Plaas asseblief \'n SD kaart in en begin And Bible weer.</string><string name="no_tasks_running">Daar is geen take wat tans uitgevoer word nie.</string><string name="no_verse_notes">Geen notas bestaan ​​vir hierdie vers nie</string><string name="notes">Voetnotas en verwysings</string><string name="okay">Goed</string><string name="one_chapter">%d hoofstuk</string><string name="one_page">%d bladsy</string><string name="one_verse">%d vers</string><string name="please_wait">Wag asseblief ...</string><string name="prefs_interface_locale_summary">Kies \'n persoonlike gebruikers taal</string><string name="prefs_interface_locale_title">Applikasie taal</string><string name="prefs_navigate_to_verse_summary">Kies vers (en hoofstuk) wanneer \'n teks gekies word</string><string name="prefs_navigate_to_verse_title">Gaan na vers</string><string name="prefs_night_mode_summary">"Om makliker in die donker te lees\n"</string><string name="prefs_night_mode_title">Nag mode</string><string name="prefs_red_letter_summary">Wys woorde van Christus in die rooi</string><string name="prefs_red_letter_title">Rooi woorde</string><string name="prefs_section_title_summary">"Wys nie-kanonieke afdeling titels\n"</string><string name="prefs_section_title_title">Afdeling Titels</string><string name="prefs_show_morphology_summary">Wys Robinson se Griekse morfologie</string><string name="prefs_show_morphology_title">Morfologiese kodes</string><string name="prefs_show_notes_summary">Wys notas</string><string name="prefs_show_notes_title">Notas</string><string name="prefs_show_strongs_summary">Skakels na Grieks en Hebreeus definisies</string><string name="prefs_show_strongs_title">Wys Strong\'s getalle</string><string name="prefs_show_verseno_summary">Wys vers nommers</string><string name="prefs_show_verseno_title">Vers nommers</string><string name="prefs_text_size_summary">Wys meer of sien meer duidelik</string><string name="prefs_text_size_title">Teks grootte</string><string name="prefs_verse_per_line_summary">Wys elke vers op \'n nuwe lyn</string><string name="prefs_verse_per_line_title">Een vers per lyn</string><string name="previous">Vorige</string><string name="progress_status">Vordering</string><string name="refresh_book_list">Herlaai lys van die beskikbare dokumente?</string><string name="rest_of_book">Gaan na die einde van die boek</string><string name="rest_of_chapter">Gaan na die einde van hoofstuk</string><string name="retry">Probeer weer</string><string name="search">Vind</string><string name="search_all_bible">Hele Bybel</string><string name="search_all_words">Alle woorde</string><string name="search_any_word">Enige woord</string><string name="search_bible_section_group_prompt">Soek Waar</string><string name="search_current_book">Huidige boek</string><string name="search_dictionary_hint">Soek woordeboek</string><string name="search_index">Soek Indeks</string><string name="search_new_testament">Nuwe Testament</string><string name="search_old_testament">Ou Testament</string><string name="search_phrase">Frase</string><string name="search_result_count">%d vergelykings gevind</string><string name="search_showing_first">Te veel vergelykings. Wys Eerste %d</string><string name="search_words_group_prompt">Vind verse</string><string name="selectPassage">Teks</string><string name="settings">Stellings</string><string name="share_verse">Deel huidige vers ...</string><string name="share_verse_subject">\'n Bybelvers is gedeel met jou met And Bible Program</string><string name="some_chapters">%d hoofstukke</string><string name="some_pages">%d bladsye</string><string name="some_verses">%d verse</string><string name="speak">Praat</string><string name="speak_queue">Lys</string><string name="speak_repeat">Herhaal</string><string name="splash_top_text">"\"En God het gesê: \"Laat daar lig wees, en daar was lig. \" Genesis 1:3"</string><string name="stop">Stop</string><string name="storage_space_warning">Onvoldoende lokale stoorplek.</string><string name="strongs">Strong\'s woordeboek</string><string name="strongs_not_installed">Laai asseblief Strong\'s Hebreeuse en Griekse woordeboeke af</string><string name="strongs_toggle_button_off">nnnn</string><string name="strongs_toggle_button_on">nnnn</string><string name="task_kill_warning">As And Bible lank oop is, mag hy gestop word as jy oorskakel na \'n ander program voordat And Bible klaar is.</string><string name="too_many_jobs">Te veel take oop. Wag vir \'n paar om te voltooi en probeer dan weer.</string><string name="tts_lang_not_available">Taal is nie beskikbaar nie.</string><string name="version_text">Weergawe %s</string><string name="wait_for_bible">Wag asseblief vir die Bybel om klaar af te laai. Jy sal dan na na die hoof skerm geneem word.</string><string name="wait_for_bible_not_yet">Wag asseblief. \'n Bybel het nog klaar geïnstalleer nie.</string></resources>
+  <string name="add_bookmark">Voeg boekmerk by</string>
+  <string name="all">Alles</string>
+  <string name="all_greek_occurrences">Vind alle gebeurtenisse</string>
+  <string name="all_hebrew_occurrences">Vind alle gebeurtenisse</string>
+  <string name="app_name">And Bible</string>
+  <string name="assign_labels">Ken etikette toe</string>
+  <string name="bookmark_added">Boekmerk bygevoeg</string>
+  <string name="bookmark_exists">Boekmerk bestaan ​​al</string>
+  <string name="bookmark_labels">Boekmerk etikette</string>
+  <string name="bookmarks">Boekmerke</string>
+  <string name="cancel">Kanselleer</string>
+  <string name="chooseBook">Dokument</string>
+  <string name="choosePassageBookName">Kies \'n Boek</string>
+  <string name="choosePassageVerseName">Kies \'n Vers</string>
+  <string name="copy">Kopieer huidige vers</string>
+  <string name="delete">Skrap</string>
+  <string name="delete_doc">Skrap %s?</string>
+  <string name="delete_index">Skrap soek indeks</string>
+  <string name="delete_search_index_doc">Skrap indeks van %s?</string>
+  <string name="dictionary_contents">Inhoud</string>
+  <string name="doc_type_bible">Bybel</string>
+  <string name="download">Laai Dokumente af</string>
+  <string name="download_complete_no_bibles">Geen Bybel is geïnstalleer. Druk terug en probeer weer.</string>
+  <string name="download_confirmation">Laai \'n Bybel van die internet af?</string>
+  <string name="download_document_confirm_prefix">"Laai af"</string>
+  <string name="download_source_message">Dokumente word afgelaai van http://www.crosswire.org &amp; http://xiphos.org</string>
+  <string name="error_downloading">\'n Fout met die aflaai. Gaan asseblief jou internet konneksie na.</string>
+  <string name="error_executing_search">Ongeldige soektog</string>
+  <string name="error_occurred">\'n Fout het ontstaan</string>
+  <string name="help">Help</string>
+  <string name="help_text">Druk die sleutel Menu vir optrede\n\nGaan na die volgende of vorige hoofstuk deur die spoor-bal, D-pad of om jou vinger oor die skerm te beweeg</string>
+  <string name="help_text_long">"<b>Navigasie</b>\nGaan na die volgende of vorige hoofstuk met behulp van die spoor-bal, D-pad of beweeg oor die skerm met jou vinger\nDubbel druk verander Vol skerm aan/af.\n\n<b>Keurlys</b>\nDruk Menu sleutel vir meer aksies\n\nOm meer dokumente af te laai druk Menu/Meer/Laai Dokumente af.\n\n<b>Spraak</b>\nDruk op praat om \'n dialoog te begin of om ophou te lees\n\n<b>Boekmerke</b>\nBoekmerke kan toegevoeg word deur middel van die inhoud keurlys. Die Boekmerk Bestuurder kan deur middel van die hoof keurlys bereik word.\nDie Boekmerk Bestuurder inhoud keurlys laat boekmerke gegroepeer word deur om etikette te gebruik.\n\n<b>Soek</b>\nSoek teks kan spesiale karakters insluit soos *, ?, AND, OR, Not (sien \"Apache Lucene - Qury Parser Syntax\" vir meer inligting)\n\n<b>Inhoud Keurlys</b>\nDruk lank op die Bybel uitsig om die inhoud keurlys oop te maak vir aksies wat die huidige vers affekteer\nDruk lank op \'n dokument in die dokument kieser, om dit uit te wis of om sy informasie te sien\nDruk lank op die Terug knoppie om toegang tot die Geskiedenis lys te kry"</string>
+  <string name="history">Geskiedenis</string>
+  <string name="index">Indeks</string>
+  <string name="index_create">Skep</string>
+  <string name="index_creation_required">"\'n Indeks word benodig om te soek. \n\nIndekse kan van die internet afgelaai of plaaslik geskep word.\n\nAflaai is baie vinniger, en afgelaaide indekse het meer soek funksies.\n\n \'n Internet aansluiting is nodig om indekse af te laai."</string>
+  <string name="index_download">Laai af</string>
+  <string name="index_not_available_for_download">Hierdie indeks is nie beskikbaar vir aflaai</string>
+  <string name="indexing_wait_msg">Wanneer die indekseer voltooi het, sal u geneem word na die soek skerm.</string>
+  <string name="lang_default">Standaard</string>
+  <string name="locale_change_warning">Applikasie sal sal stop en weer van voor af begin om oor te skakel na die nuwe taal</string>
+  <string name="more">More</string>
+  <string name="morph_robinson_not_installed">Laai asseblief \'Robinson se morfologiese analise Kodes\' woordeboek af</string>
+  <string name="new_label">Nuwe etiket</string>
+  <string name="new_label_prompt">Name</string>
+  <string name="next">Volgende</string>
+  <string name="no">Nee</string>
+  <string name="no_chapter_notes">Geen notas bestaan vir hierdie hoofstuk</string>
+  <string name="no_indexed_bible_with_strongs_ref">Jy moet \'n Bybel met die Strong\'s numbers aflaai, en dan, laai sy indeks volgens Soek funksie af</string>
+  <string name="no_internet_connection">Kon nie na die internet konnekteer nie</string>
+  <string name="no_sdcard_error">Plaas asseblief \'n SD kaart in en begin And Bible weer.</string>
+  <string name="no_tasks_running">Daar is geen take wat tans uitgevoer word nie.</string>
+  <string name="no_verse_notes">Geen notas bestaan ​​vir hierdie vers nie</string>
+  <string name="notes">Voetnotas en verwysings</string>
+  <string name="okay">Goed</string>
+  <string name="one_chapter">%d hoofstuk</string>
+  <string name="one_page">%d bladsy</string>
+  <string name="one_verse">%d vers</string>
+  <string name="please_wait">Wag asseblief ...</string>
+  <string name="prefs_interface_locale_summary">Kies \'n persoonlike gebruikers taal</string>
+  <string name="prefs_interface_locale_title">Applikasie taal</string>
+  <string name="prefs_navigate_to_verse_summary">Kies vers (en hoofstuk) wanneer \'n teks gekies word</string>
+  <string name="prefs_navigate_to_verse_title">Gaan na vers</string>
+  <string name="prefs_night_mode_summary">"Om makliker in die donker te lees\n"</string>
+  <string name="prefs_night_mode_title">Nag mode</string>
+  <string name="prefs_red_letter_summary">Wys woorde van Christus in die rooi</string>
+  <string name="prefs_red_letter_title">Rooi woorde</string>
+  <string name="prefs_section_title_summary">"Wys nie-kanonieke afdeling titels\n"</string>
+  <string name="prefs_section_title_title">Afdeling Titels</string>
+  <string name="prefs_show_morphology_summary">Wys Robinson se Griekse morfologie</string>
+  <string name="prefs_show_morphology_title">Morfologiese kodes</string>
+  <string name="prefs_show_notes_summary">Wys notas</string>
+  <string name="prefs_show_notes_title">Notas</string>
+  <string name="prefs_show_strongs_summary">Skakels na Grieks en Hebreeus definisies</string>
+  <string name="prefs_show_strongs_title">Wys Strong\'s getalle</string>
+  <string name="prefs_show_verseno_summary">Wys vers nommers</string>
+  <string name="prefs_show_verseno_title">Vers nommers</string>
+  <string name="prefs_text_size_summary">Wys meer of sien meer duidelik</string>
+  <string name="prefs_text_size_title">Teks grootte</string>
+  <string name="prefs_verse_per_line_summary">Wys elke vers op \'n nuwe lyn</string>
+  <string name="prefs_verse_per_line_title">Een vers per lyn</string>
+  <string name="previous">Vorige</string>
+  <string name="progress_status">Vordering</string>
+  <string name="refresh_book_list">Herlaai lys van die beskikbare dokumente?</string>
+  <string name="rest_of_book">Gaan na die einde van die boek</string>
+  <string name="rest_of_chapter">Gaan na die einde van hoofstuk</string>
+  <string name="retry">Probeer weer</string>
+  <string name="search">Vind</string>
+  <string name="search_all_bible">Hele Bybel</string>
+  <string name="search_all_words">Alle woorde</string>
+  <string name="search_any_word">Enige woord</string>
+  <string name="search_bible_section_group_prompt">Soek Waar</string>
+  <string name="search_current_book">Huidige boek</string>
+  <string name="search_dictionary_hint">Soek woordeboek</string>
+  <string name="search_index">Soek Indeks</string>
+  <string name="search_new_testament">Nuwe Testament</string>
+  <string name="search_old_testament">Ou Testament</string>
+  <string name="search_phrase">Frase</string>
+  <string name="search_result_count">%d vergelykings gevind</string>
+  <string name="search_showing_first">Te veel vergelykings. Wys Eerste %d</string>
+  <string name="search_words_group_prompt">Vind verse</string>
+  <string name="selectPassage">Teks</string>
+  <string name="settings">Stellings</string>
+  <string name="share_verse">Deel huidige vers ...</string>
+  <string name="share_verse_subject">\'n Bybelvers is gedeel met jou met And Bible Program</string>
+  <string name="some_chapters">%d hoofstukke</string>
+  <string name="some_pages">%d bladsye</string>
+  <string name="some_verses">%d verse</string>
+  <string name="speak">Praat</string>
+  <string name="speak_queue">Lys</string>
+  <string name="speak_repeat">Herhaal</string>
+  <string name="splash_top_text">"\"En God het gesê: \"Laat daar lig wees, en daar was lig. \" Genesis 1:3"</string>
+  <string name="stop">Stop</string>
+  <string name="storage_space_warning">Onvoldoende lokale stoorplek.</string>
+  <string name="strongs">Strong\'s woordeboek</string>
+  <string name="strongs_not_installed">Laai asseblief Strong\'s Hebreeuse en Griekse woordeboeke af</string>
+  <string name="strongs_toggle_button_off">nnnn</string>
+  <string name="strongs_toggle_button_on">nnnn</string>
+  <string name="task_kill_warning">As And Bible lank oop is, mag hy gestop word as jy oorskakel na \'n ander program voordat And Bible klaar is.</string>
+  <string name="too_many_jobs">Te veel take oop. Wag vir \'n paar om te voltooi en probeer dan weer.</string>
+  <string name="tts_lang_not_available">Taal is nie beskikbaar nie.</string>
+  <string name="version_text">Weergawe %s</string>
+  <string name="wait_for_bible">Wag asseblief vir die Bybel om klaar af te laai. Jy sal dan na na die hoof skerm geneem word.</string>
+  <string name="wait_for_bible_not_yet">Wag asseblief. \'n Bybel het nog klaar geïnstalleer nie.</string>
+</resources>
