--- a/AndBible/res/values-hu/strings.xml
+++ b/AndBible/res/values-hu/strings.xml
@@ -7,7 +7,7 @@
 -->
 <resources>
   <string name="app_name">And Bible</string>
-  <string name="splash_top_text">"\n\"És monda Isten: 'Legyen világosság:' és lőn világosság.\"\nMózes I. 1:3"</string>
+  <string name="splash_top_text">"\n\"És monda Isten: \'Legyen világosság:\' és lőn világosság.\"\nMózes I. 1:3"</string>
   <string name="help_text">Isten hozta!\nNavigáció könyv olvasás közben\nLapozás:\nHúzd az ujjad balra az előre lapozáshoz\nHúzd az ujjad jobbra a vissza lapozáshoz\nForgasd a golyót balra/jobbra az előre/hátra lapozáshoz.</string>
   <string name="help_text_long">Navigáció\nElőző / következő fejezethez használd a trackballt, D-padot vagy húzd végig az ujjad a képernyőn \n\nNyomd MENU gombot további lehetőségekért \n\nBeszéd\nNyomd a \"Felolvasás\" gombot a fejezet felolvasásához\nNyomd újra a \"Felolvasást\" a feolvasás végéhez \n\nAz aktuális vershez kapcsolód lehetőségekért nyomd hosszan a szöveget, amire megnyílik a helyi menü \nA dokumentumok listájában hosszan nyomva egy dokumentumot törölheted azt, vagy további információkat érhetsz el. \n\nKönyvjelzők\nKönyvjelzőt a vers helyimenüjénben hozhatsz létre. A könyvjelző kezelő a fő menüben érhető el. A könyvjelző kezelőben a helyi menüvel csoportosíthatod azokat címkék segítségével.</string>
   <string name="version_text">Verzió: %s</string>
@@ -142,4 +142,4 @@
   <string name="some_chapters">%d fejezet</string>
   <string name="some_pages">%d oldal</string>
   <string name="some_verses">%d vers</string>
-<string name="prefs_red_letter_summary">Krisztus szavait pirossal jelenítsd meg</string><string name="prefs_red_letter_title">Piros betűk</string><string name="prefs_section_title_summary">Nem kanonizált címek megjelenítése</string><string name="prefs_section_title_title">Fejezet címek</string><string name="strongs_toggle_button_off">nnnn</string><string name="strongs_toggle_button_on">nnnn</string><string name="speak_queue">Queue</string><string name="speak_repeat">Repeat</string></resources>
+<string name="prefs_red_letter_summary">Krisztus szavait pirossal jelenítsd meg</string><string name="prefs_red_letter_title">Piros betűk</string><string name="prefs_section_title_summary">Nem kanonizált címek megjelenítése</string><string name="prefs_section_title_title">Fejezet címek</string><string name="strongs_toggle_button_off">nnnn</string><string name="strongs_toggle_button_on">nnnn</string><string name="speak_queue">Queue</string><string name="speak_repeat">Repeat</string><string name="select_text">Select text</string><string name="select_text_help">Drag slowly to select.\nThen touch selection to copy.</string></resources>
