--- a/AndBible/res/values-ru/strings.xml
+++ b/AndBible/res/values-ru/strings.xml
@@ -7,7 +7,7 @@
 -->
 <resources>
   <string name="app_name">Библия</string>
-  <string name="splash_top_text">"\n\"И сказал Бог: 'Да будет свет.' И стал свет. \"\nБытие 1:3"</string>
+  <string name="splash_top_text">"\n\"И сказал Бог: \'Да будет свет.\' И стал свет. \"\nБытие 1:3"</string>
   <string name="help_text">Нажмите кнопку MENU для дальнейших действий\n\nДля того, чтобы перейти перейти к следующей или предыдущей главе, прокрутите трэкбол или проведите пальцем по экрану вправо или влево</string>
   <string name="help_text_long">"<b>Навигация</b>\nДля того, чтобы перейти к следующей или предыдущей главе, прокрутите трэкбол или проведите пальцем по экрану вправо или влево. \nДля того, чтобы выключить/включить просмотр на весь экран щелкните пальцем по экрану два раза \n\n<b>Меню</b> \nДля дальнейших действий нажмите кнопку MENU. \n\nДля того, чтобы скачать больше документов нажмите MENU/Еще/Скачать документы. \n\n<b>Прослушивание вслух</b>\nДля того, чтобы начать или остановить прослушивание нажмите [Прослушать вслух] . \n\n<b>Закладки</b>\nДля того, чтобы добавить закладки, зайдите в контекстное меню стиха. Для того, чтобы зайти в Менеджер закладок, пойдите в основное меню. Менеджер закладок позволяет сгруппировать закладки через ярлыки.\n\n<b>Поиск</b>\nПосик может содержать особые символы как *, ?, И, ИЛИ, НЕТ (для более подробной информации см. \"Apache Lucene - Query Parser Syntax\")\n\n<b>Контестное меню</b>\nДля того, чтобы открыть контекстное меню стиха сделайте длительное нажатие по Библии.\nДля того, чтобы удалить или просмотреть информацию сделайте длительное нажатие в разделе выбрать документ.\nДля того, чтобы получить доступ к истории сделайте длительное нажатие в на кнопку Назад\n\n"</string>
   <string name="version_text">Версия %s</string>
@@ -156,4 +156,4 @@
   <string name="prefs_section_title_title">Названия разделов</string>
   <string name="strongs_toggle_button_off">nnnn</string>
   <string name="strongs_toggle_button_on">nnnn</string>
-<string name="speak_queue">Queue</string><string name="speak_repeat">Repeat</string></resources>
+<string name="speak_queue">Queue</string><string name="speak_repeat">Repeat</string><string name="select_text">Select text</string><string name="select_text_help">Drag slowly to select.\nThen touch selection to copy.</string></resources>
